--- a/cv.css
+++ b/cv.css
@@ -8,6 +8,8 @@ html, body {
 
 * {
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 body {
@@ -193,13 +195,12 @@ section,footer {
   }
 
 .jumbotron {
-    padding: 2rem 1rem;
-    margin-bottom: 2rem;
+    padding: 2rem 1rem 0;
     border-radius: 0.3rem;
   }
   @media (min-width: 576px) {
     .jumbotron {
-      padding: 4rem 2rem;
+      padding: 4rem 2rem 0;
     }
   }
 
@@ -223,6 +224,7 @@ section,footer {
   opacity: 0;
   transform: translateX(-20px);
   transition: transform 1s, opacity 1s;
+  
   transition-delay: 0.5s;
 }
 
@@ -237,6 +239,7 @@ section,footer {
   opacity: 0;
   transform: translateX(-20px);
   transition: transform 1s, opacity 1s;
+  transition-duration: 1s;
   transition-delay: 1s;
 }
 
@@ -302,6 +305,10 @@ p {
   font-size: 1.3rem;
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+#contact {
+  padding-top: 2rem;
 }
 
 .contact {
@@ -454,9 +461,10 @@ section {
 }
 
 .boxabout {
+  padding-top: 0;
   height: 100%;
   border-top: 0;
-  padding-bottom: 10%;;
+  padding-bottom: 6.5%;
 }
 
 @media (max-width: 75em) {
@@ -473,6 +481,7 @@ section {
 
 .about {
   margin: 0 0 4.5rem;
+  padding-top: 3rem;
   color: white;
   font-size: 3rem;
   font-weight: 575;
@@ -581,7 +590,7 @@ section {
 }
 
 .skills {
-  margin: 0 0 4.5rem;
+  margin: 0 0 6rem;
   font-size: 3rem;
   font-weight: 575;
   text-transform: uppercase;
@@ -591,6 +600,12 @@ section {
   transition: opacity 1s;
   transition-delay: 0.5s;
 }
+
+@media (max-width: 62em) {
+  .skills {
+    margin: 0 0 4rem;
+    }
+  }
 
 @media (max-width: 48em) {
   .skills {
@@ -614,88 +629,234 @@ section {
 @media (max-width: 75em){
   .skills-list {
     margin-top: 0.3em;
+    font-size: 2.65rem;
+  }
+}
+
+@media (max-width: 62em){
+  .skills-list {
+    margin-top: 0.3em;
+    font-size: 2.55rem;
   }
 }
 
 @media (max-width: 48em){
   .skills-list {
-    font-size: 2.5rem;
+    font-size: 2.55rem;
     margin: 1em 0 1.5em;
   }
 }
 
+#skills-list2 {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 1rem;
+  color: white;
+  font-size: 2.55rem;
+  text-align: center;
+}
+
+td {
+  padding: 1rem 3rem;
+}
+
 .lang-html{
+  text-align: center;
+  color: #fad25a;
+  opacity: 0;
+  transform: translateX(-20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1s;
+  padding: 0 2em;
+}
+
+.lang-css{
+  text-align: center;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1s;
+  padding: 0 2em;
+}
+
+.lang-js{
+  text-align: center;
+  color: #fad25a;
+  opacity: 0;
+  transform: translateX(-20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1s;
+  padding: 0 2em;
+}
+
+.lang-fire{
+  text-align: center;
+  opacity: 0;
+  transform: translateX(-20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1.3s;
+  padding: 0 2em;
+}
+
+.lang-pyth{
+  text-align: center;
+  color: #fad25a;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1.3s;
+  padding: 0 2em;
+}
+
+.lang-c{
+  text-align: center;
+  opacity: 0;
+  transform: translateX(20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1.3s;
+  padding: 0 2em;
+}
+
+.lang-html2{
+  color: #fad25a;
   opacity: 0;
   transform: translateX(-20px);
   transition: transform 1s, opacity 1s;
   transition-delay: 1s;
 }
 
-.lang-c{
+.lang-css2{
+  color: white;
   opacity: 0;
   transform: translateX(20px);
   transition: transform 1s, opacity 1s;
-  transition-delay: 1.25s;
+  transition-delay: 1.1s;
 }
 
-.lang-css{
+.lang-js2{
+  color: white;
   opacity: 0;
   transform: translateX(-20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1.2s;
+}
+
+.lang-fire2{
+  color: #fad25a;
+  opacity: 0;
+  transform: translateX(20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1.3s;
+}
+
+.lang-pyth2{
+  color: #fad25a;
+  opacity: 0;
+  transform: translateX(-20px);
+  transition: transform 1s, opacity 1s;
+  transition-delay: 1.4s;
+}
+
+.lang-c2{
+  color: white;
+  opacity: 0;
+  transform: translateX(20px);
   transition: transform 1s, opacity 1s;
   transition-delay: 1.5s;
 }
 
-.project {
-  display: flex;
-  height: 100%;
+.projects {
+  margin: 0 0 6rem;
+  font-size: 3rem;
+  font-weight: 575;
+  text-transform: uppercase;
+  text-align: center;
   color: white;
+  opacity: 0;
+  transition: opacity 1.5s;
+  transition-delay: 0.5s;
+}
+
+@media (max-width: 48em) {
+  .projects {
+    margin: 0 0 2.5rem;
+  }
+}
+  
+  @media (max-width: 37.5em) {
+    .projects {
+      font-size: 2.5rem;
+  }
+}
+
+.project{
+  text-align: center;
+  display: flex;
   justify-content: center;
-  flex-direction: column;
+  align-items: center;
+}
+
+#hangmanpic {
+  height: 312px;
+  width: 620px;
+  border: 2px solid #F8F0E3;
+  align-self: center;
+  transform: translateY(0);
+  transition: transform 0.5s, box-shadow 0.5s;
+}
+
+#hangmanpic:hover{
+  cursor: pointer;
+  transform: translateY(-7.5px);
+  transition: transform 0.5s;
+  box-shadow: 0 0 11px rgba(231, 223, 223, 0.5);
+}
+
+@media (max-width: 62em){
+  #hangmanpic {
+    height: 260px;
+    width: 517px;
+  }
+}
+
+#hangmanpic2 {
+  height: 482px;
+  width: 311px;
+  border: 2px solid #F8F0E3;
+  align-self: center;
+  transform: translateY(0);
+  transition: transform 0.5s, box-shadow 0.5s;
+}
+
+#hangmanpic2:hover{
+  cursor: pointer;
+  transform: translateY(-7.5px);
+  transition: transform 0.5s;
+  box-shadow: 0 0 11px rgba(231, 223, 223, 0.5);
+}
+
+.hm-text {
+  color: white;
+  font-size: 2.5rem;
+  padding-top: 2.6rem;
+  transform: translateY(0);
+  transition: transform 0.5s, box-shadow 0.5s;
+}
+
+.hm-text2 {
+  color: white;
+  font-size: 2.5rem;
+  padding-top: 2.5rem;
+  transform: translateY(0);
+  transition: transform 0.5s, box-shadow 0.5s;
+}
+
+.project {
   opacity: 0;
   transform: translateY(20px);
   transition: transform 1s, opacity 1s;
-  transition-delay: 0.7s
+  transition-delay: 0.5s
 }
-
-@media (max-width: 37.5em) {
-  .project {
-    align-items: center;
-    }
-  }
-
-  .project-text {
-    text-align: left;
-  }
-  
-  @media (max-width: 62em) {
-    .project-text {
-      font-size: 1.1rem;
-      text-align: center;
-    }
-  }
-  
-  @media (max-width: 37.5em) {
-    .project-text {
-      font-size: 1.05rem;
-      text-align: center;
-    }
-  }
-  .project-text--important {
-    display: inline-block;
-    font-style: italic;
-    padding: 0 0.3rem;
-    margin: 0.3rem 0;
-    line-height: 1.6;
-  }
-  @media (max-width: 37.5em) {
-    .project-text--important {
-      display: inline;
-      margin: 0;
-      padding: 0;
-      background: transparent;
-      font-style: normal;
-    }
-  }
 
 #hero {
   min-height: 100vh;
